Darstellung und Quellen bearbetiet

--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
@@ -1,10 +1,7 @@
 \subsection{Kosten}
 
-\begin{figure}[h!]
-
-  \centering
- 
-    \begin{tabular}{rclcc}
+%\begin{figure}[h!]
+    \begin{longtable}{p{2cm}rllcc}
     \textbf{Kategorie} & \textbf{Stk} & \textbf{Bezeichnung} & \textbf{Preis / Stk} & \textbf{Stk * Preis} \\
 
     Zuführung: & 1     & Flachbandriemen 	&  Fr. 50.00  &  Fr. 50.00  \\
@@ -42,9 +39,7 @@ Antrieb Schwungräder:  & 2    & Zahnrad Z15 &  Fr. 2.88   &  Fr. 5.76  \\
           &       &       &       &  \\
           &       & \textbf{Total:} & \textbf{} & \textbf{ Fr. 424.68 } \\
 
-    \end{tabular}
-    
-    
-     \caption{Kostentabelle}
-
-\end{figure}
+    \end{longtable}
+    %  \centering
+%     \caption{Kostentabelle}
+%\end{figure}
