--- a/Dokumentation/Quellen/Quellen.bib
+++ b/Dokumentation/Quellen/Quellen.bib
@@ -1,69 +1,9 @@
-@magazine{beruf:elektroing,
-    author = {{Elektroingenieur/in BSc FH}},
-    year = {2013},
-    howpublished = {Abrufbar unter \url{www.berufsberatung.ch/dyn/1199.aspx?id=3806}},
-    note = {24. \APACmonth{9} 2013}
+@magazine{beruf:Chemie,
+    author = {{chemnitzer schulmodell}},
+    title = {{Dichte fester Stoffe}},
+    year = {2013},howpublished = {Abrufbar unter http://schulmodell.eu/index.php/physik/503-dichte-fester-stoffe.html}},
+    note = {25. \APACmonth{11} 2014}
 }
-
-@magazine{beruf:wirting,
-    author = {{Fachschaft Wirtschaftsingenieurwesen der FTAL}},
-    title = {{Wirtschaftingenieurwesen in der Schweiz}},
-    year = {2013},
-    howpublished = {Abrufbar unter \url{http://www.wi-ing.ch/}},
-    note = {23. \APACmonth{9} 2013}
-}
-
-@magazine{projekt:hslu,
-    author = {{Hochschule Luzern - Technik \& Architektur}},
-    year = {2013},
-    howpublished = {Abrufbar unter \url{http://hslu.ch/}},
-    note = {1. \APACmonth{10} 2013}
-}
-
-@magazine{projekt:itdreamjobs,
-    author = {{Fragen und Antworten zu IT-dreamjobs}},
-    year = {2013},
-    howpublished = {Abrufbar unter \url{http://it-dreamjobs.ch/worum-geht-es/fragen-und-antworten/}},
-    note = {3. \APACmonth{10} 2013}
-}
-
-@magazine{projekt:fhnw,
-    author = {{Fachhochschule Nordwestschweiz}},
-    year = {2013},
-    howpublished = {Abrufbar unter \url{http://www.fhnw.ch/technik/ueber-uns/nachwuchsfoerderung/}},
-    note = {1. \APACmonth{10} 2013}
-}
-
-@magazine{beruf:wirting2,
-    author = {{Wirtschaftsingenieurwesen im Fokus}},
-    year = {2013},
-    howpublished = {Abrufbar unter \url{http://www.vwi.org/hauptmenue/beruf-studium/wirtschaftsingenieurwesen/geschichte-und-bedeutung.html/}},
-    note = {25. \APACmonth{09} 2013}
-}
-
-@magazine{projekt:sjf,
-    author = {{Schweizer Jugend Forscht}},
-    year = {2013},
-    howpublished = {Abrufbar unter \url{http://www.sjf.ch/}},
-    note = {3. \APACmonth{10} 2013}
-}
-
-@magazine{projekt:tecmania,
-    author = {Swissmem},
-    title = {{tecmania.ch, ein Projekt von Swissmem}},
-    year = {2013},
-    howpublished = {Abrufbar unter \url{http://www.tecmania.ch/}},
-    note = {2. \APACmonth{10} 2013}
-}
-
-@magazine{studie:mint,
-    author = {{Gehrig M. u.a.}},
-    title = {{Der MINT-Fachkr\"aftemangel in der Schweiz}},
-    year = {2013},
-    howpublished = {Abrufbar unter \url{www.sbfi.admin.ch/dokumentation/00335/01737/01738/index.html?download=NHzLpZeg7t,lnp6I0NTU042l2Z6ln1acy4Zn4Z2qZpnO2Yuq2Z6gpJCDfXt3gWym162epYbg2c_JjKbNoKSn6A/}},
-    note = {31. \APACmonth{10} 2013}
-}
-
 
 @article{studie:SwissEngineering,
     author    = {{Swiss Engineering}},
