--- a/Dokumentation/Enddokumentation/Loesungskonzept/Stelleinheit.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Stelleinheit.tex
@@ -18,5 +18,5 @@ könnte gebannt. Die Ansteuerung der Schrittmotoren erfolgt über den selbst kon
 	\includegraphics[width=0.9\textwidth,clip,trim=0mm 0mm 0mm 0mm]
 	{Enddokumentation/Loesungskonzept/Bilder/Stelleinheit.jpg}
 	\caption{Grafik des Antriebes}
-	\label{fig:Grafik des Antriebes}	
+	\label{fig:GrafikDesAntriebes}	
 \end{figure}
