--- a/Dokumentation/Common/Deckblatt.tex
+++ b/Dokumentation/Common/Deckblatt.tex
@@ -12,11 +12,11 @@
         \vspace*{1.2cm}
         {\Huge \myTitel}\\
         \vspace*{1cm}
-%        \begin{figure*}[h!]
-%            \centering
-%            \includegraphics[width=0.7\textwidth]{Sourcen/Bilder/WuerfelTitel}
-%        \end{figure*}
-        \vspace*{10cm}
+        \begin{figure*}[h!]
+            \centering
+            \includegraphics[width=0.7\textwidth]{Enddokumentation/Titelbild.JPG}
+        \end{figure*}
+        \vspace*{2cm}
         {\normalsize Hochschule Luzern - Technik \& Architektur}\\
         {\normalsize PREN 1}\\
         \vspace*{0.6cm}
