Grad-Zeichen angepasst

--- a/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
@@ -20,7 +20,7 @@ Schwungräder kommen. Die Schaufeln werden voraussichtlich mit dem Förderband v
 \end{figure}
 Aus Testversuchen der Ballzuführung wurde erkannt, dass für einen idealen Abwurf beide Räder
 zeitgleich den Ball einklemmen müssen. Somit müssen die Bälle zunächst unterhalb des oberen
-Schwungrades gefördert und anschliessend in einem 45° Winkel nach oben zugeführt werden. Dazu dient
+Schwungrades gefördert und anschliessend in einem 45$^\circ$ Winkel nach oben zugeführt werden. Dazu dient
 ein Führungselement. Die Gestaltung dafür wird sich durch Tests zeigen. Als Ideen stehen zwei
 Stangen oder ein Blech, welches die Bälle zu den Schwungrädern führt zur Auswahl. Die Abbildung
 \ref{fig:Grafik Förderband}zeigt ein mögliche Ausführung der Schaufeln am Band.
