--- a/Dokumentation/Enddokumentation/Loesungskonzept/Schwungraeder.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Schwungraeder.tex
@@ -28,10 +28,10 @@ Festigkeit. Die Räder sind mit einer speziellen Haftmatte beschichtet, damit di
 den Ball übertragen werden kann. Somit wird ein höherer Haftreibungskoeffizient erreicht und ein
 Durchrutschen der Bälle verhindert werden. Die Schwungräder besitzen grosses Optimierungspotential,
 da die vorhandene Rotationsenergie der entscheidende Faktor ist. Die Achsen der zwei Schwungräder
-sind im Winkel von 45° zur Bodenplatte angeordnet. Der Abschusswinkel ist so gewählt, dass die
+sind im Winkel von 45$^\circ$ zur Bodenplatte angeordnet. Der Abschusswinkel ist so gewählt, dass die
 Tennisbälle in einem genug grossen Einschlagwinkel im Zielbereich landen und keine Möglichkeit
 besteht mit dem Korbrand zu kollidieren. Das Verhältnis von Wurfkraft zu Wurflänge ist beim Winkel
-von 45° auch am besten. Die Wurfweite wird durch die Drehzahl der Schwungräder gesteuert werden. Der
+von 45$^\circ$ auch am besten. Die Wurfweite wird durch die Drehzahl der Schwungräder gesteuert werden. Der
 Achsenabstand der beiden Räder bestimmt die Presskraft der einzelnen Bälle. Dies wiederum trägt zur
 Abbremsung der Schwungräder bei, welche nicht zu gross sein darf, damit die einzelnen Bälle in
 kurzem Abstand hintereinander zugeführt werden können. Die konkave Form der Räder gibt dem Ball die
