--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -99,6 +99,7 @@
     % Einfügen des Abbildungsverzeichnisses
     %
     \listoffigures 
+    \listoftables
     %
     % Einfügen des Quellenverzeichnisses mit einem anderen Namen
     %
