--- a/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
@@ -1,20 +1,37 @@
 \subsubsection{Antriebsstrang}
-Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewählte Varianten wurden betreffend ihrem verfügbarem Drehmoment, ihren Kosten und ihrem Gewicht beurteilt. Da der Grundaufbau der Wurfmaschine sehr einfach angepasst werden kann, können alle Varianten einfach angebracht werden. Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über verschieden Zahnräder zu den Schwungrädern übertragen wird. Der Aufbau, bei dem die benötigte Übersetzung realisiert werden kann, ist nur mit zusätzlichen Achsen realisierbar. Auch müssen die Zahnräder einen genügen grossen Durchmesser haben, damit beide Schwungräder angetrieben werden können. Deshalb fällt sofort viel Gewicht an. Bei der zweiten Variante B, wird das Drehmoment je Schwungrad seperat von einem Motor zur Verfügung gestellt. Dadurch braucht es keine komplexe Übersetzung und das verfügbare Drehmoment pro Schwungrad ist doppelt so gross. Die Variante C besteht aus einem antreibenden Motor. Das Drehmoment wird mittels eines Zahnriemens zu den Schwungrädern übertragen. Da die Schwungräder gegenläufig drehen müssen, muss der Zahnriemen umgelenkt werden. Deshalb sind auch noch zusätzliche Achsen und Räder nötig, welche das Gewicht erhöhen. Aufgrund des hohen Drehmomentes und des geringen Gewichtes bei mittelmässigen Kosten, ist die Variante B die bevorzugte Lösung für den Antriebsstrang. Ob sich diese bewährt, kann nur mit praktischen Tests ermittelt werden.
-
-%\begin{table}[h!]
+Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewählte Varianten wurden
+betreffend ihrem verfügbarem Drehmoment, ihren Kosten und ihrem Gewicht beurteilt. Da der Grundaufbau
+der Wurfmaschine sehr einfach angepasst werden kann, können alle Varianten einfach angebracht werden.
+Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über verschieden Zahnräder zu den
+Schwungrädern übertragen wird. Der Aufbau, bei dem die benötigte Übersetzung realisiert werden kann, ist
+nur mit zusätzlichen Achsen realisierbar. Auch müssen die Zahnräder einen genügen grossen Durchmesser
+haben, damit beide Schwungräder angetrieben werden können. Deshalb fällt sofort viel Gewicht an. Bei der
+zweiten Variante B, wird das Drehmoment je Schwungrad seperat von einem Motor zur Verfügung gestellt.
+Dadurch braucht es keine komplexe Übersetzung und das verfügbare Drehmoment pro Schwungrad ist doppelt
+so gross. Die Variante C besteht aus einem antreibenden Motor. Das Drehmoment wird mittels eines
+Zahnriemens zu den Schwungrädern übertragen. Da die Schwungräder gegenläufig drehen müssen, muss der
+Zahnriemen umgelenkt werden. Deshalb sind auch noch zusätzliche Achsen und Räder nötig, welche das
+Gewicht erhöhen. Aufgrund des hohen Drehmomentes und des geringen Gewichtes bei mittelmässigen Kosten,
+ist die Variante B die bevorzugte Lösung für den Antriebsstrang. Ob sich diese bewährt, kann nur mit
+praktischen Tests ermittelt werden.
     \begin{longtable}{p{0.5cm}p{0.8cm}rp{3cm}rr}
+    \caption{Nutzen-Kostentabelle ...}
+    \endfoot
+    \caption{Nutzen-Kostentabelle}
+    \label{tab:addlabel}
+    \endlastfoot
     \textbf{Variante} & \multicolumn{2}{r}{\textbf{Stück}} & \textbf{vorh. / zul. Momente (Nutzen)} & \textbf{Preis} & \textbf{Gewicht} \\\hline
           &       &                 &                      &          &  \\
-    \multirow{9}[2]{*}{A}
+    \multirow{6}[2]{*}{A}
           & 1x    & Motor           & $0.126 Nm$           & 34.95CHF & $57.0 g$ \\
           & 2x    & Zahnrad Z22     & $0.126 Nm / 0.33 Nm$ &  9.62CHF & $5.1 g$  \\
           & 2x    & Zahnrad Z90     & $0.257 Nm / 4.03 Nm$ &  3.44CHF & $57.0 g$ \\
           & 2x    & zusätzl. Achsen & -                    &  0.00CHF & $10.0 g$ \\
           & 4x    & Kugellager      & -                    &  1.76CHF & $9.8 g$  \\
           & \textbf{Tot.} &  & \textbf{0.257Nm} & \textbf{64.59CHF} & \textbf{215.9g} \\
-    \multirow{10}[2]{*}{B}
-  	  &       &                 &                      &          &  \\
           &       &                 &                      &          &  \\
+          \newpage
+    \multirow{8}[2]{*}{B}
           & 2x    & Motor           & $0.1256 Nm$          & 34.95CHF & $57.0 g$ \\
           & 2x    & Zahnrad Z15     & $0.1256 Nm / 0.15 Nm$& 2.88CHF  & $2.5 g$  \\
           & 2x    & Zahnrad Z30     & $0.257 Nm / 0.68 Nm$ & 4.05CHF  & $9.4 g$  \\
@@ -24,9 +41,9 @@ Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewäh
           & 2x    & zusätzl. Achsen &                      & 0.00CHF  & $10.0 g$ \\
           & 2x    & Motorenaufnahme &                      & 0.00CHF  & $8.0 g$  \\
           & \textbf{Tot.} &       & \textbf{0.514Nm} & \textbf{108.68CHF} & \textbf{201.2g} \\
-    \multirow{9}[2]{*}{C} 
           &       &                 &                      &          &  \\
           &       &                 &                      &          &  \\
+    \multirow{8}[2]{*}{C} 
           & 1x    & Motor           & $0.1256 Nm$          & 34.95CHF & $57.0 g$ \\
           & 1x    & Zahnrad         & $0.1256 Nm / 0.11 Nm$& 8.02CHF  & $10.0 g$ \\
           & 1x    & Zahnrad         & $0.257 Nm / 0.96 Nm$ & 15.67CHF & $102.0 g$ \\
@@ -35,8 +52,5 @@ Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewäh
           & 4x    & Kugellager      &                      & 1.76CHF  & $4.9 g$ \\
           & 3x    & Achse           &                      & 0.00CHF  & $10 g$ \\
           & \textbf{Tot.} &       & \textbf{0.257Nm} & \textbf{139.92CHF} & \textbf{312.6g} \\
-    \end{longtable}%
-% 	\centering
-%    \caption{Nutzen-Kostentabelle}
-%    \label{tab:addlabel}%
-%\end{table}
+          &       &                 &                      &          &  \\       
+    \end{longtable}
