--- a/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
@@ -14,15 +14,15 @@ Zahnriemen umgelenkt werden. Deshalb sind auch noch zusätzliche Achsen und Räd
 Gewicht erhöhen. Aufgrund des hohen Drehmomentes und des geringen Gewichtes bei mittelmässigen Kosten,
 ist die Variante B die bevorzugte Lösung für den Antriebsstrang. Ob sich diese bewährt, kann nur mit
 praktischen Tests ermittelt werden.
-    \begin{longtable}{p{0.5cm}p{0.8cm}rp{3cm}rr}
-    \caption{Nutzen-Kostentabelle ...}
-    \endfoot
-    \caption{Nutzen-Kostentabelle}
-    \label{tab:addlabel}
-    \endlastfoot
-    \textbf{Variante} & \multicolumn{2}{r}{\textbf{Stück}} & \textbf{vorh. / zul. Momente (Nutzen)} & \textbf{Preis} & \textbf{Gewicht} \\\hline
+    \begin{longtable}{p{0.5cm}p{0.8cm}lp{3cm}rr}
+        \caption{Nutzen-Kostentabelle ...}
+        \label{tab:addlabel}
+        \endfoot
+        \caption{Nutzen-Kostentabelle}
+        \endlastfoot
+        \textbf{Variante}& & \textbf{Stück} & \textbf{vorh. / zul. Momente (Nutzen)} & \textbf{Preis} & \textbf{Gewicht} \\\hline
           &       &                 &                      &          &  \\
-    \multirow{6}[2]{*}{A}
+        \multirow{6}[2]{*}{A}
           & 1x    & Motor           & $0.126 Nm$           & 34.95CHF & $57.0 g$ \\
           & 2x    & Zahnrad Z22     & $0.126 Nm / 0.33 Nm$ &  9.62CHF & $5.1 g$  \\
           & 2x    & Zahnrad Z90     & $0.257 Nm / 4.03 Nm$ &  3.44CHF & $57.0 g$ \\
@@ -31,7 +31,9 @@ praktischen Tests ermittelt werden.
           & \textbf{Tot.} &  & \textbf{0.257Nm} & \textbf{64.59CHF} & \textbf{215.9g} \\
           &       &                 &                      &          &  \\
           \newpage
-    \multirow{8}[2]{*}{B}
+        \textbf{Variante}& & \textbf{Stück} & \textbf{vorh. / zul. Momente (Nutzen)} & \textbf{Preis} & \textbf{Gewicht} \\\hline
+          &       &                 &                      &          &  \\
+        \multirow{8}[2]{*}{B}
           & 2x    & Motor           & $0.1256 Nm$          & 34.95CHF & $57.0 g$ \\
           & 2x    & Zahnrad Z15     & $0.1256 Nm / 0.15 Nm$& 2.88CHF  & $2.5 g$  \\
           & 2x    & Zahnrad Z30     & $0.257 Nm / 0.68 Nm$ & 4.05CHF  & $9.4 g$  \\
@@ -43,7 +45,7 @@ praktischen Tests ermittelt werden.
           & \textbf{Tot.} &       & \textbf{0.514Nm} & \textbf{108.68CHF} & \textbf{201.2g} \\
           &       &                 &                      &          &  \\
           &       &                 &                      &          &  \\
-    \multirow{8}[2]{*}{C} 
+        \multirow{8}[2]{*}{C} 
           & 1x    & Motor           & $0.1256 Nm$          & 34.95CHF & $57.0 g$ \\
           & 1x    & Zahnrad         & $0.1256 Nm / 0.11 Nm$& 8.02CHF  & $10.0 g$ \\
           & 1x    & Zahnrad         & $0.257 Nm / 0.96 Nm$ & 15.67CHF & $102.0 g$ \\
