Anhang Steppermotor angepasst

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -60,10 +60,11 @@
     \input{Enddokumentation/Loesungskonzept/Antriebsstrang}
     \input{Enddokumentation/Loesungskonzept/Versorgungskonzept}
     \input{Enddokumentation/ET_Gruppe/common/Hardwarezusammenarbeit}
-    \newline
+    \newpage
     \input{\EtPath/Ansteuerung}
     \input{\EtPath/fallback}
     \input{\EtPath/encoder}
+    \input{Enddokumentation/Loesungskonzept/Hardware}
     \input{Enddokumentation/Loesungskonzept/Softwarearchitektur}
     %
     % Tests
@@ -117,6 +118,7 @@
 		\pagenumbering{Roman} % römische Nummerierung des Anhangs (Grosse Buchstaben)
 		\section{Anhang}	            
 		\input{Enddokumentation/Anhang/Berechnungen}
+		\newpage
 		\input{Enddokumentation/Anhang/StepperAnhang}
 	\end{appendix}  
 \end{document}
