--- a/Dokumentation/Enddokumentation/Loesungskonzept/AufbauMechanik.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/AufbauMechanik.tex
@@ -26,7 +26,7 @@ mit einer Antihaftmatte erreicht, welche zwischen Spielfeld und Bodenplatte ange
 \begin{table}[h!]
 	\begin{tabular}{cccc}
 		Material & Dichte & Gewicht (550x120xT) & Re (Elastizitätsmodul) \\ 
-		\hline \rule{0pt}{11pt}Holz 5mm & $0.8 \frac{g}{cm^3}$ & $264 g$ & $1 \cdot 10^{-17} \frac{kN}{mm^2}$ \\ 
+		\hline \rule{0pt}{11pt}Holz $5 mm$ & $0.8 \frac{g}{cm^3}$ & $264 g$ & $1 \cdot 10^{-17} \frac{kN}{mm^2}$ \\ 
 		\rule{0pt}{11pt}Aluminium $3 mm$ & $2.71 \frac{g}{cm^3}$ & $536 g$ & $1000 \frac{kN}{mm^2}$ \\ 
 		\rule{0pt}{11pt}Acrylglas $5 mm$ & $1.19 \frac{g}{cm^3}$ & $393 g$ & $3300 \frac{N}{mm^2}$  \\ 
 	\end{tabular} 
