--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -65,11 +65,11 @@
     \input{\EtPath/fallback}
     \input{\EtPath/encoder}
     \input{Enddokumentation/Loesungskonzept/Hardware}
+    \newpage
     \input{Enddokumentation/Loesungskonzept/Softwarearchitektur}
     %
     % Tests
     %
-    \clearpage
     \section{Testberichte}
     %\input{Enddokumentation/Tests/Tests}
     \input{Funktionstests/Ballmaschine}
