--- a/Dokumentation/Common/header.tex
+++ b/Dokumentation/Common/header.tex
@@ -142,6 +142,8 @@
 \usepackage{cite}
 \usepackage{apacite}
 
+\usepackage{ulem} % zum unterstreichen
+
 \usepackage{pdfpages}                        % Packet für PDF Dateimanipulation laden
 
 \usepackage{fancyhdr}                        % http://en.wikibooks.org/wiki/LaTeX/Page_Layout#Customising_with_fancyhdr
