--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Ansteuerung.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Ansteuerung.tex
@@ -163,7 +163,7 @@
     \paragraph{Schnittstelle}$~~$\vspace{2mm}\\
     \fi
         Die Kommunikation zur Motoransteuerung erfolgt mittels SPI. Die benötigen Pins sind in der
-        Abbildung \ref{abb:SchnittstelleBrushlessBoard} ersichtlich.
+        Tabelle \ref{abb:SchnittstelleBrushlessBoard} ersichtlich.
         \begin{table}[h!]
             \begin{tabular}{ll}
                 Pin     & Funktion \\
