--- a/Dokumentation/Enddokumentation/Anhang/Berechnungen.tex
+++ b/Dokumentation/Enddokumentation/Anhang/Berechnungen.tex
@@ -209,15 +209,15 @@ Abwurfgeschwindigkeit von $4.56 \frac{m}{s}$ Die nachfolgende Abbildung
 \begin{figure}[h!]
     \begin{tikzpicture}[scale = 1.2]
     \draw [-,line width=2pt](0,0) circle (10pt);\draw [-,line width=2pt](6,0) circle (10pt); %beide Kreise der hauptrollen
-    \draw  (0,11pt) -- (6, 11pt); \draw (0,-11pt) -- (6,-11pt); %die beiden Förderbänder-Striche
+    \draw  (0,10pt) -- (6, 10pt); \draw (0,-11pt) -- (6,-11pt); %die beiden Förderbänder-Striche
     \draw (0,-2pt) -- (0, 2pt); \draw (0cm-2pt,0) -- (0cm+2pt, 0); %Das x der ersten Rolle
     \draw (6,-2pt) -- (6, 2pt); \draw (6cm-2pt,0) -- (6cm+2pt, 0); %Das x der zweiten Rolle
     \draw [<-] (6cm-0pt , 5pt) -- (7,0.5)node[right]{$m_{Umlenkrolle}$}; %zeige-Linie auf das Hintere Rad mit Text
-    \draw (5,11pt) -- (5, 25pt);\draw (5.7,11pt) -- (5.7, 25pt);\draw (5,25pt) -- (5.7, 25pt);\node  at (5.35,18pt) {$m_B$};    
-    \draw (4,11pt) -- (4, 25pt);\draw (4.7,11pt) -- (4.7, 25pt);\draw (4,25pt) -- (4.7, 25pt);\node  at (4.35,18pt) {$m_B$};        
-    \draw (3,11pt) -- (3, 25pt);\draw (3.7,11pt) -- (3.7, 25pt);\draw (3,25pt) -- (3.7, 25pt);\node  at (3.35,18pt) {$m_B$};    
-    \draw (2,11pt) -- (2, 25pt);\draw (2.7,11pt) -- (2.7, 25pt);\draw (2,25pt) -- (2.7, 25pt);\node  at (2.35,18pt) {$m_B$};    
-    \draw (1,11pt) -- (1, 25pt);\draw (1.7,11pt) -- (1.7, 25pt);\draw (1,25pt) -- (1.7, 25pt);\node  at (1.35,18pt) {$m_B$};
+    \draw (5,10pt) -- (5, 24pt);\draw (5.7,10pt) -- (5.7, 24pt);\draw (5,24pt) -- (5.7, 24pt);\node  at (5.35,18pt) {$m_B$};
+    \draw (3.875,10pt) -- (3.875, 24pt);\draw (4.575,10pt) -- (4.575, 24pt);\draw (3.875,24pt) -- (4.575, 24pt);\node  at (4.2,18pt) {$m_B$};
+    \draw (2.75,10pt) -- (2.75, 24pt);\draw (3.45,10pt) -- (3.45, 24pt);\draw (2.75,24pt) -- (3.45, 24pt);\node  at (3.1,18pt) {$m_B$};
+    \draw (1.625,10pt) -- (1.625, 24pt);\draw (2.325,10pt) -- (2.325, 24pt);\draw (1.625,24pt) -- (2.325, 24pt);\node  at (1.975,18pt) {$m_B$};
+    \draw (0.5,10pt) -- (0.5, 24pt);\draw (1.2,10pt) -- (1.2, 24pt);\draw (0.5,24pt) -- (1.2, 24pt);\node  at (.8,18pt) {$m_B$};
     \draw (0,-18pt) circle (7pt);  \draw [<-] (2pt , -20pt) -- (25pt,-25pt)node[right]{$m_{Antrieb}$}; %zeige-Linie auf das Antriebsrad mit Beschriftung
     \draw [<-] (-4pt , 4pt) -- (4pt,1.3)node[right]{$z_1 = 50$}; %zeige-Linie auf das linke Umlenkrad mit Beschriftung
     \draw [<-] (-3pt , -19pt) -- (4pt,-1.6)node[right]{$z_2 = 10$}; %zeige-Linie auf das Antriebsrad mit Beschriftung
