--- a/Dokumentation/Enddokumentation/Anhang/Berechnungen.tex
+++ b/Dokumentation/Enddokumentation/Anhang/Berechnungen.tex
@@ -26,7 +26,6 @@ beschwert, und die Verschiebung x gemessen.
 Da $x_1$ und $x_2$ in etwa gleich gross sind, kann von einer linearen Federkonstante
 ausgegangen werden. Damit kann die Kraft, die durch das Stauchen des Balles entsteht mit der
 Formel
-
 \begin{equation}  
     F_s=2\cdot k \cdot \Delta x 
 \end{equation}
@@ -229,10 +228,10 @@ Formalismus:
 \begin{align}
     \label{equ:DrehmomentFörderband}
     M_{Motor} &= M_{Antrieb} \cdot i\\
-    i &=\frac{Z_1}{Z_2}\\
+    i &=\frac{z_1}{z_2}\\
     M_{Antrieb} &= F_u \cdot r_A\\
     F_u &= \mu_T \cdot g \cdot \left(5 \cdot m_B + m_{Umlenkrolle} + m_{Band} \right)\\
-    M_{Motor} &= \mu \cdot g \cdot r_A \cdot \left(5 \cdot m_B + m_{Umlenkrolle} + m_{Band}\right) \cdot \frac{Z_1}{Z_2}
+    M_{Motor} &= \mu \cdot g \cdot r_A \cdot \left(5 \cdot m_B + m_{Umlenkrolle} + m_{Band}\right) \cdot \frac{z_1}{z_2}
 \end{align}
 Verwendete Werte:\\
 $\mu_T = 0.33$\\
@@ -241,8 +240,8 @@ $r_A = 0.008 m$\\
 $m_B = 0.055 kg$\\
 $m_{Umlenkrolle} = 0.020 kg$\\
 $m_{Band} = 0.035 kg$\\
-$Z_1 = 50$\\
-$Z_2 = 10$\\
+$z_1 = 50$\\
+$z_2 = 10$\\
 Daraus ergibt sich ein Drehmoment von $0.0017 Nm$ = \uuline{$1.7 Nmm$}\\
 \\
 \textbf{Berechnung Drehmoment des Ausrichtungsmechanismus}\\
