--- a/Dokumentation/Enddokumentation/Loesungskonzept/Hardware.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Hardware.tex
@@ -1,7 +1,5 @@
 \subsubsection{Stepper-Motor}
-    Die Ansteuerung wird in der ET-Gruppe erarbeitet und hier eingesetzt. Die Dokumentation ist im Anhang \ref{Stepper_Dokumentation} angehängt.
-    %
-    %
+    Der Motor der die Ausrichtung des Werfers vornimmt muss sehr genau und reproduzierbar die Ausrichtung vornehmen. Aus diesem Grund wird ein Stepper-Motor eingesetzt. Die Ansteuerung dieses Motors wird in der ET-Gruppe erarbeitet und hier verwendet. Die entsprechende Dokumentation ist im Anhang \ref{Stepper_Dokumentation} angehängt.
     %
 \subsubsection{DC-Motor}
     Der Antrieb des Förderbands muss nur in einer Richtung funktionierten. Deshalb ist die Ansteuerung besonders einfach. Die Steuerung des DC-Motors erfolgt mittels eines PWM-Signals, das über einen entsprechenden Transistor direkt angesteuert wird. Abbildung \ref{fig:Schema_DC-Motor} zeigt, wie die Ansteuerung des DC-Motors umgesetzt wird.
